# BRIEFVisualization

./: README.md  index.html  test
calibration_actuation/: KinectCalibration  Makefile  README.md  aruco_test.cpp  calibration_actuation.h  lab_configuration_notes  load_and_analyze  matlab  save  save_photos.cpp  server.py  show_outlines  socket_client  tag_detection  tags_for_print.ai  take_test_photos.cpp  test_calibration  test_main.cpp  test_save  traininv.m
calibration_actuation/testing/: CMakeLists.txt  ILoveCameraCalibration  aruco_test.cpp  functions.py  spammodule.cpp  vector_test.cpp
cameraarm/: README.md  usefulInstructionsPCL
cameraarm/app/: scpRPi.sh  sshRPi.sh
cameraarm/app/calibration_actuation/: README.md
cameraarm/app/calibration_actuation/libs/: calibration_actuation.cpp  calibration_actuation.h
cameraarm/app/calibration_actuation/src/: ChangeToImageDirectory.sh  ChangeToSRCDirectory.sh  Makefile  calibration_actuation.cpp  calibration_actuation_2.h  calibration_actuation_old.h  getImage.sh  load  load_server.sh  mostRecentImage  move.py  request_pose  server.py  test.txt  test_main.cpp
cameraarm/app/calibration_actuation/testing/: aruco_test.cpp  output  save  test  testMake
cameraarm/app/greedyScan/: greedyScan.py
cameraarm/app/modeling_gui/: README.md
cameraarm/app/modeling_gui/ModelingWindow/: CMakeLists.txt
cameraarm/app/modeling_gui/ModelingWindow/libs/: calibration_actuation.h  modelingwindow.h  modelingwindowstyle.h
cameraarm/app/modeling_gui/ModelingWindow/photos/: 16.txt  23.txt
cameraarm/app/modeling_gui/ModelingWindow/src/: ChangeToImageDirectory.sh  ChangeToSRCDirectory.sh  ModelingMain.cxx  calibration_actuation.cxx  getImage.sh  load_server.sh  modelingwindow.cxx  modelingwindowstyle.cxx  move.py
cameraarm/app/modeling_static/: README.md
cameraarm/app/modeling_static/ModelingWindow/: CMakeLists.txt
cameraarm/app/modeling_static/ModelingWindow/src/: modelingwindowstyle.cxx
cameraarm/app/motorGUI/: motorGUI.py
cameraarm/src/: motorServerClient.py
cameraarm/src/Kinect_code/: CMakeLists.txt  KinectScan.cpp  KinectScan2.cpp  Makefile  cmake_install.cmake  scan.sh
cameraarm/src/RPi_code/: motorServer.py
modeling_gui/ModelingWindow/: CMakeLists.txt
modeling_gui/ModelingWindow/libs/: modelingwindow.h  modelingwindowstyle.h
modeling_gui/ModelingWindow/src/: ModelingMain.cxx  modelingwindow.cxx  modelingwindowstyle.cxx
modeling_gui/NewCubeScan/poses/: 5.txt  6.txt
modeling_gui/WorkingWindow/: CMakeLists.txt  WorkingWindow.cxx  modelingwindow.h  modelingwindowstyle.h
old_calibration_actuation/: load_and_analyze
old_modeling_gui/: README.md
old_modeling_gui/ModelingWindow/libs/: modelingwindowstyle.h
old_modeling_gui/ModelingWindow/src/: modelingwindowstyle.cxx
old_modeling_gui/NewCubeScan/poses/: 11.txt  12.txt  22.txt  25.txt  29.txt  30.txt  32.txt  34.txt  8.txt
(+83 files in other folders)
